--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,6 +41,11 @@ body {
 	text-align: center;
 }
 
+#algorithm-menu-div {
+	width: 100%;
+	text-align: center;
+}
+
 .button {
 	background-color: white;
 	color: black;
