--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,6 +44,13 @@ body {
 #algorithm-menu-div {
 	width: 100%;
 	text-align: center;
+	background-color: white;
+	border: 2px solid #008CBA;
+	text-decoration: none;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 4px;
+	
 }
 
 .button {
