--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,6 +56,22 @@ body {
 	border-radius: 4px;
 }
 
+.option {
+	background-color: white;
+	color: black;
+	border: 2px solid #008CBA;
+	text-align: center;
+	padding: 16px 32px; 
+	text-decoration: none;
+	display: inlince-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 4px;
+	transition-duration: 0.4s;
+	cursor: pointer;
+	
+}
+
 .button {
 	background-color: white;
 	color: black;
