--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -47,13 +47,18 @@ body {
 }
 
 #algorithm-menu {
-	text-align: center;
 	background-color: white;
+	color: black;
 	border: 2px solid #008CBA;
+	text-align: center;
+	padding: 16px 32px; 
 	text-decoration: none;
+	display: inlince-block;
 	font-size: 16px;
 	margin: 4px 2px;
 	border-radius: 4px;
+	transition-duration: 0.4s;
+	cursor: pointer;
 }
 
 .option {
