--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -66,6 +66,7 @@ body {
 	color: black;
 	border: 2px solid #008CBA;
 	text-align: center;
+	padding: 16px 32px; 
 	text-decoration: none;
 	display: inlince-block;
 	font-size: 16px;
