--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -61,19 +61,19 @@ body {
 	cursor: pointer;
 }
 
-.option {
+.algo-menu-option {
 	background-color: white;
 	color: black;
 	border: 2px solid #008CBA;
 	text-align: center;
+	text-align-last: center;
 	padding: 16px 32px; 
 	text-decoration: none;
 	display: inlince-block;
 	font-size: 16px;
 	border-radius: 4px;
 	transition-duration: 0.4s;
-	cursor: pointer;
-	
+	cursor: pointer;	
 }
 
 .button {
