--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,7 +53,7 @@ body {
 	text-align: center;
 	padding: 16px 32px; 
 	text-decoration: none;
-	display: inlince-block;
+	display: inline-block;
 	font-size: 16px;
 	margin: 4px 2px;
 	border-radius: 4px;
@@ -66,10 +66,9 @@ body {
 	color: black;
 	border: 2px solid #008CBA;
 	text-align: center;
-	text-align-last: center;
 	padding: 16px 32px; 
 	text-decoration: none;
-	display: inlince-block;
+	display: inline-block;
 	font-size: 16px;
 	border-radius: 4px;
 	transition-duration: 0.4s;
@@ -83,7 +82,7 @@ body {
 	text-align: center;
 	padding: 16px 32px; 
 	text-decoration: none;
-	display: inlince-block;
+	display: inline-block;
 	font-size: 16px;
 	margin: 4px 2px;
 	border-radius: 4px;
