--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -49,7 +49,7 @@ body {
 #algorithm-menu {
 	background-color: white;
 	color: black;
-	border: 2px solid #008CBA;
+	border: 2px solid #343A40;
 	text-align: center;
 	padding: 16px 32px; 
 	text-decoration: none;
@@ -64,7 +64,7 @@ body {
 .algo-menu-option {
 	background-color: white;
 	color: black;
-	border: 2px solid #008CBA;
+	border: 2px solid #343A40;
 	text-align: center;
 	padding: 16px 32px; 
 	text-decoration: none;
@@ -78,7 +78,7 @@ body {
 .button {
 	background-color: white;
 	color: black;
-	border: 2px solid #008CBA;
+	border: 2px solid #343A40;
 	text-align: center;
 	padding: 16px 32px; 
 	text-decoration: none;
