--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -91,11 +91,11 @@ body {
 }
 
 .button-paused {
-	background-color: #008CBA;
+	background-color: #343A40;
 }
 
 .button:hover {
-	background-color: #008CBA;
+	background-color: #343A40;
     color: white;	
 }
 
@@ -137,7 +137,7 @@ body {
   appearance: none;
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background: #008CBA; /* Green background */
+  background: #343A40; /* Black background */
   cursor: pointer; /* Cursor on hover */
   border-radius: 4px;
 }
@@ -145,7 +145,7 @@ body {
 .slider::-moz-range-thumb {
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background: #04AA6D; /* Green background */
+  background: #343A40; /* Black background */
   cursor: pointer; /* Cursor on hover */
   border-radius: 4px;
 }
