--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,7 +45,6 @@ body {
 	background-color: white;
 	color: black;
 	border: 2px solid #343A40;
-	text-align: center;
 	padding: 16px 32px; 
 	text-decoration: none;
 	display: inline-block;
@@ -59,6 +58,7 @@ body {
 .algo-menu-option {
 	text-align: center;
 }
+/* Testing Algo Button Dropdown */
 
 
 .button {
