--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,7 +45,8 @@ body {
 	background-color: white;
 	color: black;
 	border: 2px solid #343A40;
-	padding: 16px 32px; 
+	padding-top: 16px;
+	padding-bottom: 16px;
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
