--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -47,7 +47,7 @@ body {
 	border: 2px solid #343A40;
 	padding-top: 16px;
 	padding-bottom: 16px;
-	padding-left: 16px;
+	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
